--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "@types/redux-logger": "^3.0.9",
+    "autoprefixer": "^10.4.7",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.6",
     "typescript": "4.7.3"
   }
 }
